# python-api

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  cron.yml
docs/: api.rst  conf.py  dev_guide.rst  guide.rst  index.rst  installation.rst  nitpick-exceptions
hvpy/: __init__.py  api.py  config.py  conftest.py  core.py  datasource.py  datasources.py  event.py  events.py  facade.py  helper.py  helpers.py  io.py  parameters.py  utils.py
hvpy/api_groups/communications/: get_news_feed.py  shorten_url.py
hvpy/api_groups/communications/tests/: test_get_news_feed.py  test_shorten_url.py
hvpy/api_groups/jpeg2000/: getJp2Image.py  get_jp2_header.py  get_jp2_image.py  get_jpx.py  get_jpx_closest_to_mid_point.py  get_status.py
hvpy/api_groups/jpeg2000/tests/: test_get_jp2_header.py  test_get_jp2_image.py  test_get_jpx.py  test_get_jpx_closest_to_mid_point.py  test_get_status.py
hvpy/api_groups/movies/: download_movie.py  get_movie_status.py  queue_movie.py  re_queue_movie.py
hvpy/api_groups/movies/tests/: test_download_movie.py  test_get_movie_status.py  test_queue_movie.py  test_re_queue_movie.py
hvpy/api_groups/official_clients/: get_closest_image.py  get_data_sources.py
hvpy/api_groups/official_clients/tests/: test_get_closest_image.py  test_get_data_sources.py
hvpy/api_groups/screenshots/: download_screenshot.py  get_tile.py  take_screenshot.py
hvpy/api_groups/screenshots/tests/: test_download_screenshot.py  test_get_tile.py  test_take_screenshot.py
hvpy/tests/: test_core.py  test_datasources.py  test_event.py  test_facade.py  test_fake.py  test_get_jp2_image.py  test_helper.py  test_io.py  test_utils.py
licenses/: LICENSE.rst
