[build-system]
requires = [
         "setuptools>=56,!=61.0.0",
         "setuptools_scm[toml]>=6.2",
         "wheel",
         ]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
    | .history
  )/
)
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    'setup.py',
    'docs/conf.py',
]
