[metadata]
name = hvpy
author = The Helioviewer Project
author_email = contact@helioviewer.org
license = BSD 2-Clause
license_file = licenses/LICENSE.rst
url = https://helioviewer.org/
description = Helioviewer Python API Wrapper
long_description = file: README.rst
edit_on_github = True
github_project = Helioviewer-Project/python-api
platform = any
keywords = solar physics, solar, science, sun, data, helioviewer
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = True
packages = find:
include_package_data = True
python_requires = >=3.8
setup_requires =
    setuptools_scm
install_requires =
    requests>=2.27.0
    pydantic>=1.9.1

[options.extras_require]
tests =
    pytest-astropy>=0.10
    pytest>=6.0
docs =
    sphinx
    sphinx-automodapi
    sunpy-sphinx-theme

[tool:pytest]
testpaths = "hvpy" "docs"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".jupyter" ".history"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
addopts = --doctest-rst --doctest-ignore-import-errors -p no:unraisableexception -p no:threadexception
markers =
    remote_data: marks this test function as needing remote data.
remote_data_strict = True
filterwarnings =
    error
    # Do not fail on pytest config issues (i.e. missing plugins) but do show them
    always::pytest.PytestConfigWarning
    #
    # A list of warnings to ignore follows. If you add to this list, you MUST
    # add a comment or ideally a link to an issue that explains why the warning
    # is being ignored
    #
    #
    ignore:distutils Version classes are deprecated. Use packaging.version instead.

[isort]
balanced_wrapping = True
default_section = THIRDPARTY
include_trailing_comma = True
known_first_party = hvpy
length_sort = False
length_sort_sections=stdlib
line_length = 120
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER

[coverage:run]
omit =
    hvpy/__init*
    hvpy/conftest.py
    hvpy/*setup_package*
    hvpy/tests/*
    hvpy/*/tests/*
    hvpy/extern/*
    hvpy/version*
    */hvpy/__init*
    */hvpy/conftest.py
    */hvpy/*setup_package*
    */hvpy/tests/*
    */hvpy/*/tests/*
    */hvpy/extern/*
    */hvpy/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
